public class FlightSkill{

    public int getScore() {
        return 20;
    }

    public String getDescription() {
        return "Flight";
    }

}
