public class InvisibilitySkill {

    public int getScore() {
        return 22;
    }

    public String getDescription() {
        return "Invisibility";
    }

}