public class PsychicSkill{

    public int getScore() {
        return 10;
    }

    public String getDescription() {
        return "Psychic";
    }
}
