@startuml
skinParam classAttributeIconSize 0

class Game{
+ getGameStats(): void
}

Game "1..*" *-- Character

abstract class Character{
    #name: String
    #skills:  String
    #score: int
    {abstract} #setSkill(): void
    +getName() : String
    +getSkills() : String
    {abstract} +getScore() : int
}

class Human{
    # setSkill(): void
    + getScore() : int
}

class Robot{
    # setSkill(): void
    + getScore() : int
}

class Animal{
    # setSkill(): void
    + getScore() : int
}

Character <|-- Human
Character <|-- Robot
Character <|-- Animal


Animal *-- PsychicSkill
Animal *-- FlightSkill
Animal *-- ShapeShiftingSkill

Robot *-- PsychicSkill
Robot *-- FlightSkill
Robot *-- InvisibilitySkill

Human *-- InvisibilitySkill
Robot *-- ShapeShiftingSkill



class PsychicSkill{
 +getScore(): int
 +getDescription(): String
 }
class ShapeShiftingSkill{
                   +getScore(): int
                   +getDescription(): String
                   }
class FlightSkill {
             +getScore(): int
             +getDescription(): String
             }
class InvisibilitySkill{
                  +getScore(): int
                  +getDescription(): String
           }



@enduml